@@ -1,3 +1,9 @@
+2017-06-20 Erwin Waterlander <waterlan@xs4all.nl>
+	* common.c: New flag 0 for option -i, --info. End information lines with
+	  a null character instead of a newline character, enabling correct file
+	  name interpretation.
+	* common.c: Don't print leading spaces when option -ic is used.
+
 2017-05-18 Erwin Waterlander <waterlan@xs4all.nl>
 	* man/man1/dos2unix.pod: Improved example for recursive conversion.
 	  Thanks to report of Beep6581.
